HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiAttributeDiagnostics/Expected.uv
//! Expected diagnostic metadata for the FfiAttributeDiagnostics rejected-source specimen.

expectedDiagnostic("E-SYS-3340", "diagnostics.23.FfiAttributeDiagnostics")
